--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -26,13 +26,81 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">Placeholder 10pm bla</p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="timeblock">
+        <label>9 AM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>10 AM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>11 AM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>12 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>1 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>2 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>3 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>4 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
+      <div class="timeblock">
+        <label>5 PM</label>
+        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <div class="saveDiv">
+          <i class="far fa-save fa-3x"></i>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
+      integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
