added time display in jumbotron

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <header class="jumbotron">
+      <h3 id="jumboTime">Time</h3>
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead">Placeholder 10pm bla</p>
@@ -31,63 +32,63 @@
     <div class="container">
       <div class="timeblock">
         <label>9 AM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="09AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>10 AM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="10AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>11 AM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="11AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>12 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="12PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>1 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="13PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>2 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="14PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>3 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="15PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>4 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="16PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
         <label>5 PM</label>
-        <textarea name="" class="blockInput" cols="30" rows="5"></textarea>
+        <textarea name="17PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
