--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
+      href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link
@@ -27,67 +31,68 @@
       <h3 id="jumboTime">Time</h3>
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead">Placeholder 10pm bla</p>
+      <p id="currentDay" class="lead">Date</p>
     </header>
+
     <div class="container">
       <div class="timeblock">
-        <label>9 AM</label>
+        <label class="hour">9 AM</label>
         <textarea name="09AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
-          <i class="far fa-save fa-3x"></i>
+          <i class="far fa-save fa-3x saveBtn"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>10 AM</label>
+        <label class="hour">10 AM</label>
         <textarea name="10AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>11 AM</label>
+        <label class="hour">11 AM</label>
         <textarea name="11AM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>12 PM</label>
+        <label class="hour">12 PM</label>
         <textarea name="12PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>1 PM</label>
+        <label class="hour">1 PM</label>
         <textarea name="13PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>2 PM</label>
+        <label class="hour">2 PM</label>
         <textarea name="14PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>3 PM</label>
+        <label class="hour">3 PM</label>
         <textarea name="15PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>4 PM</label>
+        <label class="hour">4 PM</label>
         <textarea name="16PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
         </div>
       </div>
       <div class="timeblock">
-        <label>5 PM</label>
+        <label class="hour">5 PM</label>
         <textarea name="17PM" class="blockInput" cols="30" rows="5"></textarea>
         <div class="saveDiv">
           <i class="far fa-save fa-3x"></i>
@@ -95,6 +100,11 @@
       </div>
     </div>
 
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
       src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
