--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     />
     <link
       rel="stylesheet"
+      href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link
@@ -35,6 +39,12 @@
     </header>
 
     <div class="container">
+      <div id="storageNotifyCon">
+        <div id="storageNotify">
+          Appointment added to
+          <p id="spanLocalText">localStorage</p>
+        </div>
+      </div>
       <div class="timeblock">
         <label class="hour">9 AM</label>
         <textarea name="09AM" class="blockInput" cols="30" rows="5"></textarea>
